baculum: Add show log time parameter to job log endpoint
